--- a/front/package.json
+++ b/front/package.json
@@ -13,10 +13,13 @@
   "author": "sarifor",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
+    "antd": "^4.8.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "next": "^12.3.4",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "eslint": "^7.14.0",
