--- a/code-practice/react/08-Hooks/package.json
+++ b/code-practice/react/08-Hooks/package.json
@@ -1,6 +1,10 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "engines": {
+    "node": "^14.19.1",
+    "npm": "^6.14.16"
+  },  
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
