--- a/code-practice/react/09-component-styling/package.json
+++ b/code-practice/react/09-component-styling/package.json
@@ -4,7 +4,7 @@
   "engines": {
     "node": "^14.19.1",
     "npm": "^6.14.16"
-  },  
+  },
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,7 +13,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
