--- a/front/package.json
+++ b/front/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "antd": "^4.8.6",
+    "next": "^12.3.4",
+    "next-redux-wrapper": "^6.0.2",
+    "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "next": "^12.3.4",
-    "prop-types": "^15.7.2",
+    "react-redux": "^8.1.3",
+    "redux": "^4.2.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
