--- a/front/package.json
+++ b/front/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
