--- a/front/package.json
+++ b/front/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "antd": "^4.8.6",
+    "axios": "^1.7.4",
     "next": "^12.3.4",
     "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.7.2",
@@ -23,6 +24,7 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^3.1.0",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
