--- a/front/package.json
+++ b/front/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0",
     "styled-components": "^5.2.1"
   },
