--- a/code-practice/react/18-async-action-management-by-redux-middlewares/18-03-Use-middlewares-for-async-actions/18-03-02-redux-saga/package.json
+++ b/code-practice/react/18-async-action-management-by-redux-middlewares/18-03-Use-middlewares-for-async-actions/18-03-02-redux-saga/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^8.1.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-saga": "^1.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
