--- a/front/package.json
+++ b/front/package.json
@@ -16,6 +16,7 @@
     "@ant-design/icons": "^4.3.0",
     "antd": "^4.8.6",
     "axios": "^1.7.4",
+    "immer": "^10.1.1",
     "nanoid": "^3.3.7",
     "next": "^12.3.4",
     "next-redux-wrapper": "^6.0.2",
