--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,7 @@
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.3.0",
     "eslint": "^7.14.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-react": "^7.21.5",
